--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -463,7 +463,8 @@ textarea {
   font-size: 70px;
   text-align: center;
   letter-spacing: 0.05em;
-  margin: 80px 60px 100px 0;
+  margin: 80px 60px 0 0;
+  line-height: 270px;
   color: #fff;
   text-shadow: 0 0 7px #fff, 0 0 2px #fff, 0 0 42px rgb(0, 204, 255), 0 0 77px rgb(0, 204, 255), 0 0 100px rgb(0, 204, 255);
 }
@@ -471,6 +472,7 @@ textarea {
   height: 180px;
   border: 3px solid #008cff;
   box-shadow: 0px 0px 8px 8px rgba(4, 154, 241, 0.5);
+  margin-top: 75px;
 }
 
 .profile__description {
@@ -511,8 +513,32 @@ textarea {
   text-shadow: 0 0 7px #fff, 0 0 2px #fff, 0 0 42px rgb(0, 204, 255), 0 0 77px rgb(0, 204, 255), 0 0 100px rgb(0, 204, 255);
 }
 
-.table {
-  color: aliceblue;
+.profile__icon-edit {
+  margin-right: 15px;
+}
+
+.game__show__h1 {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-style: italic;
+  font-weight: 800;
+  font-size: 90px;
+  line-height: 400px;
+  text-align: center;
+  letter-spacing: 0.05em;
+  margin-bottom: -40px;
+  color: #fff;
+  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 42px rgb(22, 64, 0), 0 0 77px rgb(84, 218, 14), 0 0 100px rgb(87, 255, 0);
+}
+
+.game__show__picture {
+  width: 100%;
+  border-radius: 50px;
+}
+
+.game__show__buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
 }
 
 .cart__h1 {
