--- a/public/assets/sass/_profile.scss
+++ b/public/assets/sass/_profile.scss
@@ -11,7 +11,8 @@
     font-size: 70px;
     text-align: center;
     letter-spacing: 0.05em;
-    margin: 80px 60px 100px 0;
+    margin: 80px 60px 0 0;
+    line-height: 270px;
     
     color: #fff;
     text-shadow:  0 0 7px #fff, 
@@ -24,6 +25,8 @@
     height: 180px;
     border: 3px solid #008cff;
     box-shadow: 0px 0px 8px 8px rgba(4, 154, 241, 0.5);
+    margin-top: 75px;
+
   }
 }
 .profile__description {
@@ -71,5 +74,9 @@
   0 0 2px #fff, 
   0 0 42px rgb(0, 204, 255),   
   0 0 77px rgb(0, 204, 255), 
-  0 0 100px rgb(0, 204, 255) 
+  0 0 100px rgb(0, 204, 255);
+}
+
+.profile__icon-edit {
+  margin-right: 15px;
 }
