--- a/templates/stripe/index.html.twig
+++ b/templates/stripe/index.html.twig
@@ -9,8 +9,8 @@
 			{% include 'navbar.html.twig' %}
 		{% endblock %}
 	</div>
-	<div class="container">
-		<div class="row justify-content-center">
+	<div class="container ">
+		<div class="row justify-content-center stripe">
 			<div class="col-4">
 				<div class="card">
 					<div class="card-body">
@@ -22,10 +22,10 @@
 
 						<form id='checkout-form' method='post' action="{{ path('app_stripe_charge') }}">
 							<input type='hidden' name='stripeToken' id='stripe-token-id'>
-							<label for="card-element" class="mb-5">Formulaire de paiement</label>
+							<label for="card-element" class="label-pay mb-5">Formulaire de paiement</label>
 							<br>
 							<div id="card-element" class="form-control"></div>
-							<button id='pay-btn' class="btn btn-success mt-3" type="button" style="margin-top: 20px; width: 100%;padding: 7px;" onclick="createToken()">PAYER
+							<button id='pay-btn' class="btn btn-success mt-3" type="button" onclick="createToken()">PAYER
 							</button>
 						<form>
 						</div>
